// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Confirmation dialogue Custom Action 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    class="filter svelte-7u451e open"
  />
   
  <div
    class="backdrop svelte-7u451e open"
  >
    <button
      class="absolute top-0 right-0 m-4 svelte-1f17ahs iconOnly"
    >
      <i
        class="material-icons svelte-1f17ahs"
      >
        close
      </i>
       
       
       
    </button>
     
    <article
      class="svelte-7u451e"
    >
      <header
        class="svelte-7u451e"
      >
        This is a title
      </header>
       
      <div
        class="content svelte-7u451e"
      >
        <div
          class="content svelte-x966ku"
          slot="content"
        >
          Are you really sure?
        </div>
      </div>
       
      <footer
        class="svelte-7u451e"
      >
        <span
          slot="buttons"
        >
          <button
            class="mr-2 svelte-1f17ahs"
          >
            <i
              class="material-icons svelte-1f17ahs"
            >
              undo
            </i>
             
            <span>
              No, let me go!
            </span>
             
             
          </button>
           
          <button
            class="svelte-1f17ahs"
          >
            <i
              class="material-icons svelte-1f17ahs"
            >
              redo
            </i>
             
            <span>
              Yes, I'm sure!
            </span>
             
             
          </button>
        </span>
      </footer>
    </article>
  </div>
   
  
   
  <button
    class="svelte-1f17ahs"
  >
     
    <span>
      Re-open
    </span>
     
     
  </button>
</section>
`;

exports[`Storyshots Components/Confirmation dialogue Default 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    class="filter svelte-7u451e open"
  />
   
  <div
    class="backdrop svelte-7u451e open"
  >
    <button
      class="absolute top-0 right-0 m-4 svelte-1f17ahs iconOnly"
    >
      <i
        class="material-icons svelte-1f17ahs"
      >
        close
      </i>
       
       
       
    </button>
     
    <article
      class="svelte-7u451e"
    >
      <header
        class="svelte-7u451e"
      >
        This is a title
      </header>
       
      <div
        class="content svelte-7u451e"
      >
        <div
          class="content svelte-x966ku"
          slot="content"
        >
          Are you really sure?
        </div>
      </div>
       
      <footer
        class="svelte-7u451e"
      >
        <span
          slot="buttons"
        >
          <button
            class="mr-2 svelte-1f17ahs"
          >
            <i
              class="material-icons svelte-1f17ahs"
            >
              cancel
            </i>
             
            <span>
              No
            </span>
             
             
          </button>
           
          <button
            class="svelte-1f17ahs"
          >
            <i
              class="material-icons svelte-1f17ahs"
            >
              done
            </i>
             
            <span>
              Yes
            </span>
             
             
          </button>
        </span>
      </footer>
    </article>
  </div>
   
  
   
  <button
    class="svelte-1f17ahs"
  >
     
    <span>
      Re-open
    </span>
     
     
  </button>
</section>
`;
